--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/profile.png"
+  avatar           : "https://yhwang08.github.io/images/profile.png"
   name             : "Yihan Wang"
   pronouns         : "she/her"  
   bio              : "PhD candidate in Hydrology"
